add RWD from Header to Main but not included Carousel function

--- a/src/Carousel.css
+++ b/src/Carousel.css
@@ -2,7 +2,7 @@
   text-align: center;
   width: 100%;
 }
-
+/* "homepage": "https://Leelu3333.github.io/practicecopy", */
 .carousel-wrapper {
   position: relative;
   width: 100%;
